Fix #91. Reference Unity examples.

--- a/asset/style.scss
+++ b/asset/style.scss
@@ -105,6 +105,10 @@ code {
   font: normal 15px $mono;
 }
 
+a code {
+  color: $primary;
+}
+
 pre {
   color: #444;
   font: normal 13px/16px $mono;
