--- a/html/style.css
+++ b/html/style.css
@@ -20,6 +20,7 @@ body {
   border-top: solid 1px #3d525c;
   box-shadow: 0 0 30px rgba(71, 51, 31, 0.3); }
   .nav .bar {
+    cursor: pointer;
     background: #505c62;
     box-shadow: 0 5px 20px rgba(25, 59, 77, 0.3);
     border-top: solid 1px #85a0ad;
@@ -27,7 +28,9 @@ body {
   .nav .column {
     max-width: 560px;
     margin: 0 auto;
-    padding: 3px 340px 3px 40px; }
+    padding: 3px 40px; }
+  .nav .thread {
+    float: right; }
   .nav a {
     color: #99ddff; }
   .nav a:hover {
@@ -36,7 +39,6 @@ body {
   .nav h1 {
     font: 14px "Source Sans Pro", "Lucida Grande", "Lucida Sans Unicode", Verdana, sans-serif;
     font-weight: 300;
-    color: #cddde4;
     padding: 0;
     margin: 0;
     border: none; }
@@ -61,7 +63,7 @@ body {
     font: 13px/20px "Source Sans Pro", "Lucida Grande", "Lucida Sans Unicode", Verdana, sans-serif;
     font-weight: 300; }
 
-.nav:hover {
+.nav.expanded {
   height: 340px; }
 
 .page {
@@ -83,6 +85,9 @@ body {
 .page.sidebar {
   padding-right: 300px; }
 
+.nav.sidebar .column {
+  padding-right: 340px; }
+
 h1 {
   font: 200 60px "Source Sans Pro", Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
   padding: 100px 0 4px 0;
@@ -93,6 +98,9 @@ h1.book {
   font: normal 16px/20px "Source Sans Pro", Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
   padding: 6px 0 30px 0;
   border: none; }
+
+.section:before {
+  content: " / "; }
 
 h2 {
   color: #1481b8;
@@ -161,14 +169,14 @@ pre {
   overflow: auto; }
 
 aside {
-  color: #666;
+  color: #868279;
   padding: 10px 10px;
-  background: #fbfaf8;
-  border: solid 1px #f9f6f1;
-  border-bottom: solid 1px #f2ead9;
+  background: #faf8f5;
+  border: solid 1px #f7f4ed;
+  border-bottom: solid 1px #f0e9db;
   border-radius: 3px; }
   aside p, aside li {
-    font: 13px/20px "Source Sans Pro", "Lucida Grande", "Lucida Sans Unicode", Verdana, sans-serif; }
+    font: 15px/22px "Source Sans Pro", "Lucida Grande", "Lucida Sans Unicode", Verdana, sans-serif; }
   aside > p:first-child {
     margin-top: 0; }
   aside > p:last-child {
@@ -191,6 +199,8 @@ aside.sidebar {
   padding-left: 22px;
   border-radius: 0;
   border-left: solid 8px #f3efe7; }
+  aside.sidebar p, aside.sidebar li {
+    font: 14px/20px "Source Sans Pro", "Lucida Grande", "Lucida Sans Unicode", Verdana, sans-serif; }
 
 .in-progress {
   display: none;
@@ -217,8 +227,7 @@ aside.sidebar {
     top: 0;
     font: bold 24px "Source Sans Pro", "Lucida Grande", "Lucida Sans Unicode", Verdana, sans-serif;
     padding: 4px;
-    cursor: pointer;
-    display: none; }
+    cursor: pointer; }
   .in-progress .dismiss:hover {
     color: #cc7700; }
   .in-progress p {
@@ -398,29 +407,48 @@ a.outline:after {
   text-align: left;
   padding: .5em 0; }
 
+@media only screen and (max-width: 900px) {
+  .thread {
+    display: none; }
+
+  .section-nav {
+    display: none; } }
 @media only screen and (max-width: 479px) {
   .content {
     padding: 0 20px 20px 20px; }
 
+  .nav .column {
+    padding: 3px 20px; }
+    .nav .column p, .nav .column li {
+      line-height: 19px; }
+
   h1 {
-    font-size: 50px; }
+    font-size: 50px;
+    padding-top: 70px; }
+
+  h1.book {
+    padding-bottom: 20px; }
+
+  .section {
+    display: block; }
+
+  .section:before {
+    content: ""; }
 
   h2 {
-    font: bold 24px "Source Sans Pro", Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
-    margin: 20px 0 5px 0; }
+    font-size: 25px;
+    margin-left: -18px;
+    padding-left: 10px;
+    border-left: solid 6px #d9eaf2; }
 
   h3 {
-    font: bold 18px "Source Sans Pro", Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
-    margin: 20px 0 5px 0; }
-
-  p {
-    margin: 10px 0; }
+    font-size: 18px;
+    margin-left: -18px;
+    padding-left: 10px;
+    border-left: solid 6px #d9eaf2; }
 
   p, li {
     font: normal 14px/20px Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif; }
-
-  blockquote {
-    padding: 0 10px; }
 
   blockquote p {
     font: italic 15px/22px Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif; }
@@ -435,11 +463,24 @@ a.outline:after {
   ul, ol {
     padding: 0 0 0 20px; }
 
+  p.footer {
+    font-weight: 400; }
+
   .in-progress {
-    padding: 4px 12px;
-    font: normal 13px/20px "Source Sans Pro", "Lucida Grande", "Lucida Sans Unicode", Verdana, sans-serif;
-    margin-bottom: 18px; }
-    .in-progress p {
-      font: normal 13px/20px "Source Sans Pro", "Lucida Grande", "Lucida Sans Unicode", Verdana, sans-serif; }
-    .in-progress .signature {
-      font: italic 12px "Source Sans Pro", "Lucida Grande", "Lucida Sans Unicode", Verdana, sans-serif; } }
+    box-shadow: 0 5px 10px rgba(25, 59, 77, 0.05);
+    padding: 5px 10px;
+    font: normal 14px/22px "Source Sans Pro", "Lucida Grande", "Lucida Sans Unicode", Verdana, sans-serif;
+    color: #8f6d3d;
+    margin-bottom: -50px; }
+    .in-progress .dismiss {
+      position: absolute;
+      right: 8px;
+      top: 0;
+      font: bold 36px "Source Sans Pro", "Lucida Grande", "Lucida Sans Unicode", Verdana, sans-serif;
+      padding: 4px; }
+    .in-progress h2 {
+      line-height: 22px;
+      margin: 6px 0; } }
+@media only screen and (max-height: 400px) {
+  .nav {
+    display: none; } }
